--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["ms-python.python", "ms-toolsai.jupyter"]
+  "recommendations": ["ms-python.python", "ms-toolsai.jupyter", "astral-sh.ty"]
 }
