--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
+    "tiktoken>=0.12.0",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
 ]
